rydde mer (#1762)